more code cleanup (ts is not progress bruh)